syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";


option csharp_namespace = "CareerCloud.gRPC.Protos";

service ApplicantProfile{
	rpc GetApplicantProfile(IdAppProfile) returns (ApplicantProfileReply);
	rpc GetApplicantProfiles(google.protobuf.Empty) returns (ApplicantProfiles);
	rpc AddApplicantProfile(ApplicantProfiles) returns (google.protobuf.Empty);
	rpc UpdateApplicantProfile(ApplicantProfiles) returns (google.protobuf.Empty);
	rpc DeleteApplicantProfile(ApplicantProfiles) returns (google.protobuf.Empty);
}

message IdAppProfile{
	string Id =1;
}

message ApplicantProfiles{
	repeated ApplicantProfileReply AppProfiles =1;
}

message ApplicantProfileReply{
	string Id = 1;
	string Login = 2;
	double CurrentSalary =3;
	double CurrentRate =4;
	string Currency =5;
	string Country =6;
	string Province =7;
	string Street =8;
	string City =9;
	string PostalCode =10;
	bytes TimeStamp= 11;
}